--- a/main.css
+++ b/main.css
@@ -234,6 +234,15 @@ a {
   to {transform: translate(0, 0px);}
 }
 
+.topnav {
+  display: none;
+}
+
+.sideNavProjS span, .sideNav span {
+  font-size: 20px;
+  text-decoration: underline;
+}
+
 
 #name {
   margin: 0;
@@ -302,8 +311,19 @@ a {
 
 }
 
+/* A strange area needed for main image */
+@media only screen and (max-width: 800px) {
+  #signPosts {
+    width: 75%;
+  }
+}
+
 /* For Mobile Devices */
 @media only screen and (max-width: 600px){
+
+  body {
+    margin: 0;
+  }
 
   table {
     height: 50px;
@@ -327,15 +347,16 @@ a {
   }
 
   .row.projHeader {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   .sideNavProjS {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
-    margin-bottom: 40px;
+    border: 1px solid #d3d3d3;
+    border-radius: 7px;
   }
 
   .projectType {
@@ -348,7 +369,8 @@ a {
   }
 
   .projectContent {
-    margin-left: 0;
+    /* margin-left: 0; */
+      margin: 20px 25px 20px 25px;
   }
 
   .mobileNav {
@@ -378,6 +400,59 @@ a {
     right: 0;
   }
 
+  /* ------------------------------------------------------------------------ */
 
+  .topnav {
+    display: block;
+    overflow: hidden;
+    background-color: #000;
+    /* padding-top: 15px; */
+    /* padding-bottom: 15px; */
+  }
+
+  .active {
+    background-color: #fc4a1a;
+  }
+
+
+
+  .topnav a {
+    color: #fff;
+    float: left;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    /* padding: 15px; */
+  }
+
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: #ffffff;
+    padding-right: 20px;
+    padding-left: 20px;
+    background-color: #000;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 
 }
