--- a/index.css
+++ b/index.css
@@ -126,6 +126,12 @@ i {
         padding-left: 5%;
     }
 
+    .center-modal {
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+    }
+
     .right {
         display: -webkit-box;
         display: -ms-flexbox;
