Updated Width of Modal To Be 100% at Media Breakpoint

--- a/index.css
+++ b/index.css
@@ -149,6 +149,10 @@ i {
     .modal-body p {
         margin-bottom: 8%;
     }
+
+    .w-75 {
+        width: 100% !important;
+    }
 }
 
 /* START SOURCE: https://jsfiddle.net/dfmbe60u/13/ */
