--- a/index.css
+++ b/index.css
@@ -1,10 +1,7 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
-
 body {
     -webkit-transition: background-color .5s;
     -o-transition: background-color .5s;
     transition: background-color .5s;
-    font-family: 'B612', sans-serif;
 }
 
 .begin {
@@ -12,7 +9,15 @@ body {
 }
 
 .title {
+    transition: color 1s, opacity 1s;
+    margin-bottom: 6.5%;
     font-weight: 800;
+    font-style: italic;
+    font-size: 2.6em;
+}
+
+.title:hover {
+    text-decoration: none;
 }
 
 .custom-switch .custom-control-label::before {
@@ -27,11 +32,65 @@ body {
     transition: background-color .5s;
 }
 
-.title {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    margin-bottom: 6.5%;
+.intro {
+    transition: color 1s, opacity 1s;
+    margin-bottom: 8.5%;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.intro-opener {
+    transition: border-color 1s;
+    font-style: italic;
+    border-left: 4px solid;
+    padding-top: 13px;
+    padding-bottom: 0px;
+    padding-left: 10px;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+
+.post {
+    transition: color 1s, opacity 1s;
+    cursor: pointer;
+    border-bottom: 2px solid;
+    line-height: 8px;
+    margin-bottom: 5%;
+}
+
+.post:hover {
+    text-decoration: none;
+}
+
+.post-title {
+    font-weight: 800;
+}
+
+.post-info {
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.post-content {
+    transition: color 1s, opacity 1s;
+}
+
+.post-basis {
+    font-size: 22px;
+    border-bottom: 4px solid;
+}
+
+.post-body p {
+    text-indent: 40px;
+    font-size: 19px;
+}
+.post-body ol {
+    list-style-position: inside;
+    font-size: 19px;
+}
+
+.post-body ol li {
+    margin-bottom: 2.5%;
 }
 
 .center {
@@ -55,75 +114,16 @@ body {
             flex-direction: column;
 }
 
-.intro {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    margin-bottom: 8.5%;
-    line-height: 8px;
-    font-size: 18px;
-    font-weight: 500;
+footer {
+    border-top: 4px solid;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
-i {
-    border-bottom: 4px solid;
-}
-
-.post {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    cursor: pointer;
-    border-bottom: 2px solid;
-    line-height: 8px;
-    margin-bottom: 5%;
-}
-
-.post-title {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    font-weight: 800;
-}
-
-.post-info {
-    font-size: 13px;
-    font-weight: 500;
-}
-
-.modal-content {
-    -webkit-transition: background-color 1.5s;
-    -o-transition: background-color 1.5s;
-    transition: background-color 1.5s;
-}
-
-.modal-title {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    font-weight: 800;
-}
-
-.modal-body {
-    -webkit-transition: color 1.5s;
-    -o-transition: color 1.5s;
-    transition: color 1.5s;
-    max-height: calc(100vh - 210px);
-    overflow-y: scroll;
-}
-
-.modal-body p {
-    line-height: 36px;
-    margin-bottom: 5%;
-    font-size: 17px;
-}
-
-.modal-open .modal {
-    padding-left: 0;
-    display: flex !important;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
+footer div.email-footer {
+    
 }
 
 @media only screen and (max-width: 768px) {
@@ -138,20 +138,8 @@ i {
         line-height: 1;
     }
 
-    .intro b i {
-        line-height: 1;
-    }
-
     .post {
         line-height: 1;
-    }
-
-    .modal-body p {
-        margin-bottom: 8%;
-    }
-
-    .w-75 {
-        width: 100% !important;
     }
 }
 
@@ -181,9 +169,9 @@ i {
     left: 0.2em;
     width: 1em;
     border-radius: 1em;
-    -webkit-transition: left 300ms;
-    -o-transition: left 300ms;
-    transition: left 300ms;
+    -webkit-transition: left .5s;
+    -o-transition: left .5s;
+    transition: left .5s;
 }
 
 .custom-switch.custom-switch-adaptive .custom-control-input:checked ~ .custom-control-label {
