--- a/light.css
+++ b/light.css
@@ -17,34 +17,26 @@ body {
     background-size: cover;
 }
 
-.title {
+.title,
+.title:hover,
+.intro,
+.post, 
+.post:hover,
+.post-content {
     color: #1F1F1F;
-}
-
-.intro {
-    color: #1F1F1F;
-}
-
-.post {
-    color: #1F1F1F;
+    opacity: 1;
 }
 
 .post-title {
-    color: #008100;
+    color: #6F5A07;
+    /* text-shadow: 0px 0px 1px #1F1F1F; */
 }
 
-.modal-content {
-    background-color: #FFFFF0;
+.intro-opener {
+    border-color: #6F5A07;
 }
 
-.modal-title {
-    color: #008100;
-}
-
-.modal-body {
-    color: #1F1F1F;
-}
-
+/* START SOURCE: https://jsfiddle.net/dfmbe60u/13/ */
 .custom-switch.custom-switch-adaptive .custom-control-label {
     color: #1F1F1F;
     border: 1px solid #1F1F1F;
@@ -55,4 +47,6 @@ body {
     color: #1F1F1F;
     border: 1px solid #1F1F1F;
     background-color: #FFFFF0;
+    opacity: 1;
 }
+/* END SOURCE */
