--- a/light.css
+++ b/light.css
@@ -22,12 +22,14 @@ body {
 .intro,
 .post, 
 .post:hover,
-.post-content {
+.post-content,
+.blockquote p {
     color: #1F1F1F;
     opacity: 1;
 }
 
-.post-title {
+.post-title,
+.blockquote h5 {
     color: #6F5A07;
     /* text-shadow: 0px 0px 1px #1F1F1F; */
 }
